fix(plugins/plugin-client-common): guidebooks render poorly in big windows with large fonts
we are using a fixed 960px in a few places.
also, dangit, but the wizard nav gets too narrow in these cases.

--- a/plugins/plugin-client-common/web/scss/components/Terminal/Notebook.scss
+++ b/plugins/plugin-client-common/web/scss/components/Terminal/Notebook.scss
@@ -30,7 +30,7 @@ $margin-for-right-elements: calc(#{math.div(0.875 * $input-padding, $right-eleme
 
 @include Block {
   @include NotEditable {
-    max-width: 960px;
+    max-width: $max-column-width;
   }
 }
 
